--- a/src/db/app.json
+++ b/src/db/app.json
@@ -206,7 +206,7 @@
     "event": [
       {
         "id": 1,
-        "date": "2019-01-01",
+        "date": "2020-09-30",
         "hour": "12:30",
         "table": 1,
         "repeat": false,
@@ -255,5 +255,15 @@
         "starters": ["lemonWater"]
       }
     ],
-    "booking": []
+    "booking": [
+      {
+        "id": 1,
+        "date": "2020-09-29",
+        "hour": "16:00",
+        "table": 1,
+        "duration": 2,
+        "ppl": 4,
+        "starters": ["lemonWater"]
+      }
+    ]
   }
